--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,140 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.btn{
+  width: max-content;
+  display: inline-block;
+  color: white;
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid white;
+  transition: var(--transition);
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn:hover{
+  background: black;
+  color: white;
+  border-color: transparent;
 }
+
+.btn2{
+  width: max-content;
+  display: inline-block;
+  color: black;
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid white;
+  transition: var(--transition);
+  text-decoration: none;
+}
+
+.btn2:hover{
+  background: white;
+  color: black;
+  border-color: black;
+}
+
+.btn-primary{
+  background: white;
+  color: black;
+}
+/* *{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+} */
+
+/* :root{
+  --color-bg: #1f1f38;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-ms: 90%;
+
+  --transition: all 400ms ease;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
+
+body{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: var(--color-bg);
+  color: white;
+  line-height: 1.7;
+}
+
+/* Styles */
+
+/* .container{
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1, h2, h3{
+  font-family: 500;
+}
+
+h1{
+  font-size: 2.5rem;
+}
+
+section{
+  margin-top: 8rem;
+}
+
+section > h2, section > h3{
+  text-align: center;
+  color: beige;
+}
+
+section > h2{
+  margin-bottom: 3rem;
+}
+
+a{
+  transition: var(--transition);
+}
+
+a:hover{
+  color: aliceblue;
+}
+
+
+
+img{
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+/***(Medium Dev)**/
+/* @media screen and (max-width: 1024px){
+  .container{
+    width: var(--container-width-md);
+  }
+
+  section{
+    margin-top: 6rem;
+  }
+}
+
+/***(Small Dev)**/
+/* @media screen and (max-width: 600px){
+  .container{
+    width: var(--container-width-sm);
+  }
+
+  section > h2{
+    margin-top: 2rem;
+  } */
